# xander-operator

./: .gitignore  .pre-commit-config.yaml  ACHIEVEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IDENTITY.md  LICENSE  PROJECT.md  README-PRODUCTION.md  README.md  README_github.md  SECURITY.md  docker-compose.yml  gateway.py  pyproject.toml  requirements.txt  researcher.py  run_api.py  setup_playwright.sh  test_stub.py  vector_memory.py  xander_operator.py
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/commands/gsd/: add-backlog.md  add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  debug.md  discuss-phase.md  do.md  execute-phase.md  fast.md  forensics.md  health.md  help.md  insert-phase.md  list-phase-assumptions.md  list-workspaces.md  manager.md  map-codebase.md  milestone-summary.md  new-milestone.md  new-project.md  new-workspace.md  next.md  note.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  plant-seed.md  pr-branch.md  profile-user.md  progress.md  quick.md  reapply-patches.md  remove-phase.md  remove-workspace.md  (+15 more)
.claude/get-shit-done/references/: decimal-phase-calculation.md  git-integration.md  git-planning-commit.md  model-profile-resolution.md  phase-argument-parsing.md  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdownlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md
docs/: TELEGRAM.md  api.md  architecture.md  quickstart.md  sample_tasks.json
docs/internal/: AUTONOMY.md  BLUEPRINT_MAPPING.md  DNA.md  IMPLEMENTATION_PLAN.md  OPERATOR_ARCHITECTURE.md  PROTOCOLS.md  SAFETY.md  SOUL.md  TASK_QUEUE_SPEC.md  VECTOR_MEMORY.md
examples/: telegram_tasks.py
operator/: __init__.py  cli.py
screenshots/: README.md
scripts/: add_task.py
src/xander_operator/: __init__.py  agent.py  agent_autonomous.py  cli.py  config.py  operator_agent.py
tests/: conftest.py  test_agent.py  test_detectors.py  test_gateway.py  test_llm.py  test_operator.py  test_reporter.py  test_tools.py
xander_operator/: __init__.py  detectors.py  file_utils.py  gsd_planner.py  llm.py  memory.py  model_router.py  reporter.py  researcher.py  skills.py  telegram.py
xander_operator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+55 files in other folders)
