[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xander-operator"
version = "1.0.1"
description = "Safe browser automation with human approval gates and vector memory"
authors = [{name="GBOYEE"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "duckduckgo-search>=4.0",
]

[project.optional-dependencies]
vector = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
]

[project.scripts]
operator = "operator.cli:main"

[tool.setuptools.packages.find]
include = ["xander_operator*", "operator*", "vector_memory*", "researcher*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.toml"]
