[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xander-operator"
version = "0.1.0"
description = "AI developer agent that writes code and applies changes safely"
authors = [{name = "Oyebanji Adegboyega", email = "oyebanjiadegboyega@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "requests>=2.31",
    "tenacity>=8.0",
]

[project.scripts]
xander-operator = "xander_operator.cli:main"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.0",
    "isort>=5.13",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "W"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.hatch.build]
include = ["src/xander_operator/**/*.py"]
exclude = []
